Closed Bug 1440993 Opened 6 years ago Closed 6 years ago

Intermittent PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::layers::CopyableCanvasRenderer::ReadbackSurface]

Categories

(Core :: Graphics: CanvasWebGL, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- fixed
firefox61 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: nical)

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(2 files)

Filed by: apavel [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=164190861&repo=autoland

https://queue.taskcluster.net/v1/task/Ko2GRWYxTo--jvrrJTEoxQ/runs/0/artifacts/public/logs/live_backing.log

[task 2018-02-25T11:23:38.389Z] 11:23:38     INFO - TEST-PASS | dom/canvas/test/webgl-conf/generated/test_conformance__context__context-creation.html | getError was expected value: NO_ERROR : Should be no errors 
[task 2018-02-25T11:23:38.390Z] 11:23:38     INFO - TEST-PASS | dom/canvas/test/webgl-conf/generated/test_conformance__context__context-creation.html | getError was expected value: NO_ERROR : Should be no errors 
[task 2018-02-25T11:23:38.391Z] 11:23:38     INFO - Buffered messages finished
[task 2018-02-25T11:23:38.391Z] 11:23:38    ERROR - TEST-UNEXPECTED-TIMEOUT | dom/canvas/test/webgl-conf/generated/test_conformance__context__context-creation.html | application timed out after 370 seconds with no output
[task 2018-02-25T11:23:38.393Z] 11:23:38    ERROR - Force-terminating active process(es).
[task 2018-02-25T11:23:38.393Z] 11:23:38     INFO - Determining child pids from psutil...
[task 2018-02-25T11:23:38.395Z] 11:23:38     INFO - [1297]
[task 2018-02-25T11:23:38.395Z] 11:23:38     INFO - ==> process 1221 launched child process 1241
[task 2018-02-25T11:23:38.396Z] 11:23:38     INFO - ==> process 1221 launched child process 1272
[task 2018-02-25T11:23:38.398Z] 11:23:38     INFO - ==> process 1221 launched child process 1297
[task 2018-02-25T11:23:38.398Z] 11:23:38     INFO - ==> process 1221 launched child process 1334
[task 2018-02-25T11:23:38.399Z] 11:23:38     INFO - Found child pids: set([1272, 1297, 1334, 1241])
[task 2018-02-25T11:23:38.399Z] 11:23:38     INFO - Failed to get child procs
[task 2018-02-25T11:23:38.400Z] 11:23:38     INFO - Killing process: 1272
[task 2018-02-25T11:23:38.400Z] 11:23:38     INFO - TEST-INFO | started process screentopng
[task 2018-02-25T11:23:38.680Z] 11:23:38     INFO - TEST-INFO | screentopng: exit 0
[task 2018-02-25T11:23:38.681Z] 11:23:38     INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-25T11:23:38.682Z] 11:23:38     INFO - Killing process: 1297
[task 2018-02-25T11:23:38.682Z] 11:23:38     INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-25T11:23:38.683Z] 11:23:38     INFO - Killing process: 1334
[task 2018-02-25T11:23:38.683Z] 11:23:38     INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-25T11:23:38.684Z] 11:23:38     INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-25T11:23:38.684Z] 11:23:38     INFO - Killing process: 1241
[task 2018-02-25T11:23:38.685Z] 11:23:38     INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-25T11:23:38.686Z] 11:23:38     INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-25T11:23:38.686Z] 11:23:38     INFO - Killing process: 1221
[task 2018-02-25T11:23:38.687Z] 11:23:38     INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-25T11:23:38.813Z] 11:23:38     INFO - psutil found pid 1221 dead
[task 2018-02-25T11:23:38.922Z] 11:23:38  WARNING - runtests.py | Failed to get app exit code - running/crashed?
[task 2018-02-25T11:23:38.922Z] 11:23:38     INFO - TEST-INFO | Main app process: exit 0
[task 2018-02-25T11:23:38.923Z] 11:23:38     INFO - runtests.py | Application ran for: 0:07:42.055799
[task 2018-02-25T11:23:38.924Z] 11:23:38     INFO - zombiecheck | Reading PID log: /tmp/tmpvf0a3epidlog
[task 2018-02-25T11:23:38.924Z] 11:23:38     INFO - ==> process 1221 launched child process 1241
[task 2018-02-25T11:23:38.925Z] 11:23:38     INFO - ==> process 1221 launched child process 1272
[task 2018-02-25T11:23:38.926Z] 11:23:38     INFO - ==> process 1221 launched child process 1297
[task 2018-02-25T11:23:38.927Z] 11:23:38     INFO - ==> process 1221 launched child process 1334
[task 2018-02-25T11:23:38.928Z] 11:23:38     INFO - zombiecheck | Checking for orphan process with PID: 1272
[task 2018-02-25T11:23:38.929Z] 11:23:38     INFO - zombiecheck | Checking for orphan process with PID: 1241
[task 2018-02-25T11:23:38.929Z] 11:23:38     INFO - zombiecheck | Checking for orphan process with PID: 1334
[task 2018-02-25T11:23:38.930Z] 11:23:38     INFO - zombiecheck | Checking for orphan process with PID: 1297
[task 2018-02-25T11:23:38.931Z] 11:23:38     INFO - mozcrash Copy/paste: /usr/local/bin/linux64-minidump_stackwalk /tmp/tmpUb76fl.mozrunner/minidumps/2c0046db-e00d-96af-6e40-57506ae3c55e.dmp /builds/worker/workspace/build/symbols
[task 2018-02-25T11:23:46.122Z] 11:23:46     INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/2c0046db-e00d-96af-6e40-57506ae3c55e.dmp
[task 2018-02-25T11:23:46.123Z] 11:23:46     INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/2c0046db-e00d-96af-6e40-57506ae3c55e.extra
[task 2018-02-25T11:23:46.151Z] 11:23:46     INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::layers::CopyableCanvasRenderer::ReadbackSurface]
[task 2018-02-25T11:23:46.152Z] 11:23:46     INFO - Crash dump filename: /tmp/tmpUb76fl.mozrunner/minidumps/2c0046db-e00d-96af-6e40-57506ae3c55e.dmp
[task 2018-02-25T11:23:46.152Z] 11:23:46     INFO - Operating system: Linux
[task 2018-02-25T11:23:46.153Z] 11:23:46     INFO -                   0.0.0 Linux 4.4.0-98-generic #121~14.04.1-Ubuntu SMP Wed Oct 11 11:54:55 UTC 2017 x86_64
[task 2018-02-25T11:23:46.154Z] 11:23:46     INFO - CPU: amd64
[task 2018-02-25T11:23:46.154Z] 11:23:46     INFO -      family 6 model 62 stepping 4
[task 2018-02-25T11:23:46.154Z] 11:23:46     INFO -      2 CPUs
[task 2018-02-25T11:23:46.155Z] 11:23:46     INFO - 
[task 2018-02-25T11:23:46.156Z] 11:23:46     INFO - GPU: UNKNOWN
[task 2018-02-25T11:23:46.156Z] 11:23:46     INFO - 
[task 2018-02-25T11:23:46.157Z] 11:23:46     INFO - Crash reason:  SIGSEGV
[task 2018-02-25T11:23:46.157Z] 11:23:46     INFO - Crash address: 0x38
[task 2018-02-25T11:23:46.158Z] 11:23:46     INFO - Process uptime: not available
[task 2018-02-25T11:23:46.158Z] 11:23:46     INFO - 
[task 2018-02-25T11:23:46.159Z] 11:23:46     INFO - Thread 0 (crashed)
[task 2018-02-25T11:23:46.160Z] 11:23:46     INFO -  0  libxul.so!mozilla::layers::CopyableCanvasRenderer::ReadbackSurface [CopyableCanvasRenderer.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 149 + 0x0]
[task 2018-02-25T11:23:46.160Z] 11:23:46     INFO -     rax = 0x00007f9a7d7ec000   rdx = 0x00007f9aa1e0b120
[task 2018-02-25T11:23:46.160Z] 11:23:46     INFO -     rcx = 0x0000000000000000   rbx = 0x00007f9a80d6dd60
[task 2018-02-25T11:23:46.161Z] 11:23:46     INFO -     rsi = 0x0000000000000000   rdi = 0x0000000000000000
[task 2018-02-25T11:23:46.162Z] 11:23:46     INFO -     rbp = 0x00007ffe63427970   rsp = 0x00007ffe63427920
[task 2018-02-25T11:23:46.162Z] 11:23:46     INFO -      r8 = 0x00007f9a82b6b000    r9 = 0x00007f9aa1e0e110
[task 2018-02-25T11:23:46.163Z] 11:23:46     INFO -     r10 = 0x000000002d000bc3   r11 = 0x0000000000000246
[task 2018-02-25T11:23:46.163Z] 11:23:46     INFO -     r12 = 0x00007ffe634279f8   r13 = 0x0000000000000000
[task 2018-02-25T11:23:46.164Z] 11:23:46     INFO -     r14 = 0x00007f9a80d6dd60   r15 = 0x00007f9a8243b670
[task 2018-02-25T11:23:46.165Z] 11:23:46     INFO -     rip = 0x00007f9a9ce62db2
[task 2018-02-25T11:23:46.165Z] 11:23:46     INFO -     Found by: given as instruction pointer in context
[task 2018-02-25T11:23:46.166Z] 11:23:46     INFO -  1  libxul.so!mozilla::layers::BasicCanvasLayer::Paint [BasicCanvasLayer.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 44 + 0x5]
[task 2018-02-25T11:23:46.167Z] 11:23:46     INFO -     rbx = 0x00007f9a79268800   rbp = 0x00007ffe63427a40
[task 2018-02-25T11:23:46.168Z] 11:23:46     INFO -     rsp = 0x00007ffe63427980   r12 = 0x00007f9a7f6102e0
[task 2018-02-25T11:23:46.169Z] 11:23:46     INFO -     r13 = 0x00007ffe634279f8   r14 = 0x00007f9a80d6dd60
[task 2018-02-25T11:23:46.169Z] 11:23:46     INFO -     r15 = 0x00007f9a8243b670   rip = 0x00007f9a9ced4e53
[task 2018-02-25T11:23:46.170Z] 11:23:46     INFO -     Found by: call frame info
[task 2018-02-25T11:23:46.171Z] 11:23:46     INFO -  2  libxul.so!mozilla::layers::BasicLayerManager::PaintSelfOrChildren [BasicLayerManager.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 713 + 0xd]
[task 2018-02-25T11:23:46.171Z] 11:23:46     INFO -     rbx = 0x00007f9a9ced4e6f   rbp = 0x00007ffe63427aa0
[task 2018-02-25T11:23:46.172Z] 11:23:46     INFO -     rsp = 0x00007ffe63427a50   r12 = 0x00007f9a58e37f00
[task 2018-02-25T11:23:46.172Z] 11:23:46     INFO -     r13 = 0x00007f9a79268b48   r14 = 0x0000000000000000
[task 2018-02-25T11:23:46.173Z] 11:23:46     INFO -     r15 = 0x00007f9a8243b670   rip = 0x00007f9a9ceda758
[task 2018-02-25T11:23:46.174Z] 11:23:46     INFO -     Found by: call frame info
[task 2018-02-25T11:23:46.174Z] 11:23:46     INFO -  3  libxul.so!mozilla::layers::BasicLayerManager::PaintLayer [BasicLayerManager.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 895 + 0x12]
[task 2018-02-25T11:23:46.174Z] 11:23:46     INFO -     rbx = 0x00007ffe63427ba0   rbp = 0x00007ffe63427c90
[task 2018-02-25T11:23:46.175Z] 11:23:46     INFO -     rsp = 0x00007ffe63427ab0   r12 = 0x0000000000000000
[task 2018-02-25T11:23:46.176Z] 11:23:46     INFO -     r13 = 0x00007f9a79268800   r14 = 0x0000000000000000
[task 2018-02-25T11:23:46.176Z] 11:23:46     INFO -     r15 = 0x00007f9a58e37f00   rip = 0x00007f9a9ced9ab9
[task 2018-02-25T11:23:46.177Z] 11:23:46     INFO -     Found by: call frame info
[task 2018-02-25T11:23:46.178Z] 11:23:46     INFO -  4  libxul.so!mozilla::layers::BasicLayerManager::EndTransactionInternal [BasicLayerManager.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 616 + 0x12]
[task 2018-02-25T11:23:46.180Z] 11:23:46     INFO -     rbx = 0x00007f9a8243b670   rbp = 0x00007ffe63427d80
[task 2018-02-25T11:23:46.181Z] 11:23:46     INFO -     rsp = 0x00007ffe63427ca0   r12 = 0x00007ffe63427d10
[task 2018-02-25T11:23:46.182Z] 11:23:46     INFO -     r13 = 0x00007f9a9e60eb6a   r14 = 0x00007f9a8243b6a8
[task 2018-02-25T11:23:46.182Z] 11:23:46     INFO -     r15 = 0x00007f9a8243b750   rip = 0x00007f9a9ceda58a
[task 2018-02-25T11:23:46.182Z] 11:23:46     INFO -     Found by: call frame info
[task 2018-02-25T11:23:46.183Z] 11:23:46     INFO -  5  libxul.so!mozilla::FrameLayerBuilder::PaintItems [FrameLayerBuilder.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 3835 + 0x18]
[task 2018-02-25T11:23:46.184Z] 11:23:46     INFO -     rbx = 0x00007f9a8243b670   rbp = 0x00007ffe63428050
[task 2018-02-25T11:23:46.184Z] 11:23:46     INFO -     rsp = 0x00007ffe63427d90   r12 = 0x00007f9a8e18b760
[task 2018-02-25T11:23:46.184Z] 11:23:46     INFO -     r13 = 0x00007f9a8243b750   r14 = 0x0000000000000001
[task 2018-02-25T11:23:46.185Z] 11:23:46     INFO -     r15 = 0x00007f9a7f6102e0   rip = 0x00007f9a9e60e5b5
[task 2018-02-25T11:23:46.186Z] 11:23:46     INFO -     Found by: call frame info
[task 2018-02-25T11:23:46.186Z] 11:23:46     INFO -  6  libxul.so!mozilla::FrameLayerBuilder::DrawPaintedLayer [FrameLayerBuilder.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 6226 + 0x18]
[task 2018-02-25T11:23:46.187Z] 11:23:46     INFO -     rbx = 0x00007f9a58e37f00   rbp = 0x00007ffe634281d0
[task 2018-02-25T11:23:46.187Z] 11:23:46     INFO -     rsp = 0x00007ffe63428060   r12 = 0x00007f9a82b91c40
[task 2018-02-25T11:23:46.188Z] 11:23:46     INFO -     r13 = 0x00007f9a82c1c800   r14 = 0x00007ffe63428170
[task 2018-02-25T11:23:46.189Z] 11:23:46     INFO -     r15 = 0x00007f9a790a6040   rip = 0x00007f9a9e60f106
[task 2018-02-25T11:23:46.190Z] 11:23:46     INFO -     Found by: call frame info

[task 2018-02-25T11:23:54.472Z] 11:23:54     INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ libc-2.23.so + 0xfb74d]
[task 2018-02-25T11:23:54.473Z] 11:23:54     INFO - Crash dump filename: /tmp/tmpUb76fl.mozrunner/minidumps/1d124fc3-36dc-ff14-4e3d-b91a7cde4739.dmp
[task 2018-02-25T11:23:54.474Z] 11:23:54     INFO - Operating system: Linux
[task 2018-02-25T11:23:54.474Z] 11:23:54     INFO -                   0.0.0 Linux 4.4.0-98-generic #121~14.04.1-Ubuntu SMP Wed Oct 11 11:54:55 UTC 2017 x86_64
[task 2018-02-25T11:23:54.475Z] 11:23:54     INFO - CPU: amd64
[task 2018-02-25T11:23:54.475Z] 11:23:54     INFO -      family 6 model 62 stepping 4
[task 2018-02-25T11:23:54.476Z] 11:23:54     INFO -      2 CPUs
[task 2018-02-25T11:23:54.477Z] 11:23:54     INFO - 
[task 2018-02-25T11:23:54.478Z] 11:23:54     INFO - GPU: UNKNOWN
[task 2018-02-25T11:23:54.479Z] 11:23:54     INFO - 
[task 2018-02-25T11:23:54.480Z] 11:23:54     INFO - Crash reason:  SIGABRT
[task 2018-02-25T11:23:54.480Z] 11:23:54     INFO - Crash address: 0x3e8000003d2
[task 2018-02-25T11:23:54.481Z] 11:23:54     INFO - Process uptime: not available
[task 2018-02-25T11:23:54.481Z] 11:23:54     INFO - 
[task 2018-02-25T11:23:54.481Z] 11:23:54     INFO - Thread 0 (crashed)
[task 2018-02-25T11:23:54.482Z] 11:23:54     INFO -  0  libc-2.23.so + 0xfb74d
[task 2018-02-25T11:23:54.483Z] 11:23:54     INFO -     rax = 0xfffffffffffffffc   rdx = 0x00000000ffffffff
[task 2018-02-25T11:23:54.483Z] 11:23:54     INFO -     rcx = 0x00007fa85151174d   rbx = 0x00007fa8512c03a0
[task 2018-02-25T11:23:54.484Z] 11:23:54     INFO -     rsi = 0x0000000000000005   rdi = 0x00007fa82212b0d0
[task 2018-02-25T11:23:54.485Z] 11:23:54     INFO -     rbp = 0x00007ffe25df2350   rsp = 0x00007ffe25df2320
[task 2018-02-25T11:23:54.485Z] 11:23:54     INFO -      r8 = 0x0000000000000005    r9 = 0x0000000000000001
[task 2018-02-25T11:23:54.485Z] 11:23:54     INFO -     r10 = 0x00007fa829b9ef80   r11 = 0x0000000000000293
[task 2018-02-25T11:23:54.486Z] 11:23:54     INFO -     r12 = 0x00007fa82212b0d0   r13 = 0x00000000ffffffff
[task 2018-02-25T11:23:54.487Z] 11:23:54     INFO -     r14 = 0x00007fa842438cc9   r15 = 0x0000000000000005
[task 2018-02-25T11:23:54.488Z] 11:23:54     INFO -     rip = 0x00007fa85151174d
[task 2018-02-25T11:23:54.488Z] 11:23:54     INFO -     Found by: given as instruction pointer in context
[task 2018-02-25T11:23:54.489Z] 11:23:54     INFO -  1  libxul.so!PollWrapper [nsAppShell.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 53 + 0x10]
[task 2018-02-25T11:23:54.489Z] 11:23:54     INFO -     rbp = 0x00007ffe25df2350   rsp = 0x00007ffe25df2330
[task 2018-02-25T11:23:54.490Z] 11:23:54     INFO -     rip = 0x00007fa842438cf9
[task 2018-02-25T11:23:54.490Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.491Z] 11:23:54     INFO -  2  libglib-2.0.so.0.4800.2 + 0x4a38c
[task 2018-02-25T11:23:54.492Z] 11:23:54     INFO -     rbp = 0x0000000000000005   rsp = 0x00007ffe25df2360
[task 2018-02-25T11:23:54.492Z] 11:23:54     INFO -     rip = 0x00007fa84c3a738c
[task 2018-02-25T11:23:54.492Z] 11:23:54     INFO -     Found by: call frame info
[task 2018-02-25T11:23:54.493Z] 11:23:54     INFO -  3  libglib-2.0.so.0.4800.2 + 0x4a49c
[task 2018-02-25T11:23:54.493Z] 11:23:54     INFO -     rsp = 0x00007ffe25df23c0   rip = 0x00007fa84c3a749c
[task 2018-02-25T11:23:54.493Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.494Z] 11:23:54     INFO -  4  libxul.so!nsAppShell::ProcessNextNativeEvent [nsAppShell.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 295 + 0x5]
[task 2018-02-25T11:23:54.494Z] 11:23:54     INFO -     rsp = 0x00007ffe25df23e0   rip = 0x00007fa842438d3f
[task 2018-02-25T11:23:54.495Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.495Z] 11:23:54     INFO -  5  libxul.so!nsBaseAppShell::DoProcessNextNativeEvent [nsBaseAppShell.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 139 + 0x10]
[task 2018-02-25T11:23:54.495Z] 11:23:54     INFO -     rsp = 0x00007ffe25df23f0   rip = 0x00007fa842408e2f
[task 2018-02-25T11:23:54.496Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.496Z] 11:23:54     INFO -  6  libxul.so!nsBaseAppShell::OnProcessNextEvent [nsBaseAppShell.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 290 + 0x8]
[task 2018-02-25T11:23:54.497Z] 11:23:54     INFO -     rsp = 0x00007ffe25df2430   rip = 0x00007fa84240ba61
[task 2018-02-25T11:23:54.497Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.497Z] 11:23:54     INFO -  7  libxul.so!nsThread::ProcessNextEvent [nsThread.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 952 + 0x1b]
[task 2018-02-25T11:23:54.498Z] 11:23:54     INFO -     rsp = 0x00007ffe25df2480   rip = 0x00007fa840755c59
[task 2018-02-25T11:23:54.498Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.499Z] 11:23:54     INFO -  8  firefox!arena_t::SplitRun [rb.h:6980116aa15d1fbfc6aad106348a801904c6c082 : 144 + 0x5]
[task 2018-02-25T11:23:54.499Z] 11:23:54     INFO -     rsp = 0x00007ffe25df2550   rip = 0x000000000040f100
[task 2018-02-25T11:23:54.499Z] 11:23:54     INFO -     Found by: stack scanning
[task 2018-02-25T11:23:54.499Z] 11:23:54     INFO -  9  firefox!arena_t::AllocRun [mozjemalloc.cpp:6980116aa15d1fbfc6aad106348a801904c6c082 : 2520 + 0xa]
[task 2018-02-25T11:23:54.500Z] 11:23:54     INFO -     rsp = 0x00007ffe25df25d0   rip = 0x000000000040f301
[task 2018-02-25T11:23:54.500Z] 11:23:54     INFO -     Found by: stack scanning
Crash Signature: [@ mozilla::layers::CopyableCanvasRenderer::ReadbackSurface] [@ libc-2.23.so + 0xfb74d] → [@ mozilla::layers::CopyableCanvasRenderer::ReadbackSurface] [@ libc-2.23.so + 0xfb74d]
This appears to crash when dereferencing a null gl context screen here: https://searchfox.org/mozilla-central/rev/8fa0b32c84f924c6809c690117dbd59591f79607/gfx/layers/CopyableCanvasRenderer.cpp#148

The calling code has paths to handle ReadbackSurface returning null (although I think in this case it is expected to return something), and the gl context code itself has lots of null-check around its screen member, so it seems fair to null-check it here.
It's probable that the failure is caused by the fact that the screen should not be null in the first place and that the real error happened earlier. In this case the bug will keep existing in another form (the canvas will probably not display properly under these conditions) but this is better than crashing, especially for webgl which tends to be flackier and the rest because of driver issues, OOMs, etc.
Assignee: nobody → nical.bugzilla
Attachment #8958758 - Flags: review?(sotaro.ikeda.g)
Attachment #8958758 - Flags: review?(sotaro.ikeda.g) → review+
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c2bd475a4221
Null-check the GLContext's screen when reading back canvas data. r=sotaro.
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2c4523d56ee3
followup: Avoid overwriting the frontbuffer variable. r=nical
https://hg.mozilla.org/mozilla-central/rev/c2bd475a4221
https://hg.mozilla.org/mozilla-central/rev/2c4523d56ee3
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Please request Beta uplift on this when you're comfortable doing so.
Flags: needinfo?(nical.bugzilla)
Upliftable version of the patch (contains a fix of the original patch that had landed immediately after).

Approval Request Comment
[Feature/Bug causing the regression]:
[User impact if declined]: Some crashes
[Is this code covered by automated tests?]: No.
[Has the fix been verified in Nightly?]: Yes.
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: Not riksy.
[Why is the change risky/not risky?]: Just a null-check.
[String changes made/needed]: None.
Flags: needinfo?(nical.bugzilla)
Attachment #8960107 - Flags: approval-mozilla-beta?
Comment on attachment 8960107 [details] [diff] [review]
Null-check the gl context's screen (upliftable patch).

gfx crash fix, beta60+
Attachment #8960107 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: