Bug 1440993: followup: Avoid overwriting the frontbuffer variable. r=nical

MozReview-Commit-ID: 68ljrd3qf1u